Fix the missing background color for Badge component.

--- a/web/html/src/branding/css/base/theme.scss
+++ b/web/html/src/branding/css/base/theme.scss
@@ -1332,6 +1332,8 @@ tr.changed > td {
 
 .badge {
   font-size: 12px;
+  border-radius: 10px;
+  background: $eos-bc-gray-1000;
 }
 
 // We can reenable these after the theme migration is complete
